# tauri-llm

./: README.md  bun.lockb  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: +layout.ts  +page.svelte
